--- a/styles.css
+++ b/styles.css
@@ -237,41 +237,58 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 18px;
+    width: 20px;
     height: 100%;
     z-index: 10000;
     pointer-events: none;
     /* Base cream color */
     background: linear-gradient(
         to left,
-        #c4bfb4 0%,
-        #d8d4cc 50%,
-        #ccc7bc 100%
+        #d4cfc4 0%,
+        #e0dcd4 50%,
+        #d4cfc4 100%
     );
-    /* Ruler tick marks layered on top */
-    background-image:
-        /* Base gradient */
-        linear-gradient(to left, #c4bfb4 0%, #d8d4cc 50%, #ccc7bc 100%),
-        /* Small ticks every 10px */
-        repeating-linear-gradient(
-            to bottom,
-            transparent 0px,
-            transparent 9px,
-            rgba(60, 50, 40, 0.5) 9px,
-            rgba(60, 50, 40, 0.5) 10px
-        ),
-        /* Medium ticks every 50px */
-        repeating-linear-gradient(
-            to bottom,
-            transparent 0px,
-            transparent 49px,
-            rgba(50, 40, 30, 0.7) 49px,
-            rgba(50, 40, 30, 0.7) 51px
-        );
-    background-size: 100% 100%, 6px 10px, 10px 50px;
-    background-position: 0 0, left 0, left 0;
-    background-repeat: no-repeat, repeat-y, repeat-y;
     box-shadow: inset 2px 0 6px rgba(0, 0, 0, 0.3);
+}
+
+/* Small tick marks every 10px */
+.ie-right-ruler::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: repeating-linear-gradient(
+        to bottom,
+        transparent 0px,
+        transparent 9px,
+        rgba(60, 45, 30, 0.6) 9px,
+        rgba(60, 45, 30, 0.6) 10px
+    );
+    background-size: 8px 10px;
+    background-position: left top;
+    background-repeat: repeat-y;
+}
+
+/* Larger tick marks every 50px */
+.ie-right-ruler::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: repeating-linear-gradient(
+        to bottom,
+        transparent 0px,
+        transparent 48px,
+        rgba(40, 30, 20, 0.8) 48px,
+        rgba(40, 30, 20, 0.8) 50px
+    );
+    background-size: 14px 50px;
+    background-position: left top;
+    background-repeat: repeat-y;
 }
 
 .ie-panel-open {
